[tool.poetry]
name = "ascii-art-project-1-kamila3361"
version = "0.1.0"
description = ""
authors = ["Kamila <tashimovakamila1@gmail.com>"]
readme = "README.md"
packages = [{include = "ascii_art_project_1_kamila3361"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
